fixing BG issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 html {
   background-color: rgb(57, 57, 57);
+  overflow: visible;
 }
 
 body {
